# rich-structlog

./: .gitignore  Taskfile.yaml  pyproject.toml
rich_structlog/: log.py
